--- a/Stipendium/Views/Home/Index.cshtml
+++ b/Stipendium/Views/Home/Index.cshtml
@@ -1,5 +1,55 @@
-﻿<div class="jumbotron">
-    <h1>Hello, world!</h1>
-    <p>...</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+﻿<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+<div class="jumbotron">
+    <h1 class="display-4">Stipendium</h1>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec imperdiet turpis. Mauris faucibus tellus at iaculis blandit.</p>
+    <hr class="my-4">
+
+
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <img src="https://image.shutterstock.com/display_pic_with_logo/85050/285691058/stock-photo-empty-square-and-modern-office-building-285691058.jpg" alt="...">
+                <div class="caption">
+                    <h3>Join today</h3>
+                    <p>Register at Stipendium to get full access to site's features</p>
+                    <p><a href="/Home/Registration" class="btn btn-primary" role="button">Join Now!</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <img src="https://t4.ftcdn.net/jpg/01/67/62/79/500_F_167627921_guhNywzdWVWQkEu1M0UuVweUATPaHoOo.jpg" alt="...">
+                <div class="caption">
+                    <h3>Search</h3>
+                    <p>Search our database to find the company right for you</p>
+                    <br />
+                    <p><a href="/Stiftelses/Index" class="btn btn-primary" role="button">Search</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+
 </div>
+
+
+
+
+<style>
+    .jumbotron {
+        margin: 30px 0px 30px;
+    }
+    .jumbotron p {
+        margin-bottom: 15px;
+        font-size: initial;
+        font-weight: 200;
+    }
+    .thumbnail>img{
+        min-height:240px;
+    }
+</style>
