changed upload function

--- a/Stipendium/Views/Stiftelses/UploadExcel.cshtml
+++ b/Stipendium/Views/Stiftelses/UploadExcel.cshtml
@@ -86,7 +86,7 @@
 }
 
 
-@if(ViewBag.Successes!= 0 && ViewBag.Successes != null)
+@if(ViewBag.Successes != null)
 {
     <h3 style="color:forestgreen">Success!</h3>
     <h4>Transfer to database complete with:</h4>
