--- a/Stipendium/Views/Home/Index.cshtml
+++ b/Stipendium/Views/Home/Index.cshtml
@@ -9,10 +9,10 @@
 
 
     <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-sm-6 col-md-3">
+        <div class="col-md-2"></div>
+        <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-                <img src="https://image.shutterstock.com/display_pic_with_logo/85050/285691058/stock-photo-empty-square-and-modern-office-building-285691058.jpg" alt="...">
+                <img src="https://st2.depositphotos.com/3053199/11797/v/950/depositphotos_117974246-stock-illustration-office-building-with-an-entrance.jpg" alt="...">
                 <div class="caption">
                     <h3>Join today</h3>
                     <p>Register at Stipendium to get full access to site's features</p>
@@ -21,13 +21,12 @@
             </div>
         </div>
 
-        <div class="col-sm-6 col-md-3">
+        <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <img src="https://t4.ftcdn.net/jpg/01/67/62/79/500_F_167627921_guhNywzdWVWQkEu1M0UuVweUATPaHoOo.jpg" alt="...">
                 <div class="caption">
                     <h3>Search</h3>
                     <p>Search our database to find the company right for you</p>
-                    <br />
                     <p><a href="/Stiftelses/Index" class="btn btn-primary" role="button">Search</a>
                 </div>
             </div>
@@ -51,5 +50,11 @@
     }
     .thumbnail>img{
         min-height:240px;
+    }
+    .caption>p{
+        text-align:center;
+    }
+    .caption>h3{
+        text-align:center;
     }
 </style>
