--- a/Stipendium/Views/Shared/_Layout.cshtml
+++ b/Stipendium/Views/Shared/_Layout.cshtml
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stipendium</title>
     @Styles.Render("~/Content/css")
+    <style>
+        .navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
+            max-height: 355px !important;
+        }
+    </style>
 
 </head>
 <body>
@@ -16,12 +21,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Stipendium", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Stiftelseverket", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Stiftelses","Index","Stiftelses")</li>
+                    <li>@Html.ActionLink("Hem", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Stiftelser","Index","Stiftelses")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -31,7 +36,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Stipendium</p>
+            <p>&copy; @DateTime.Now.Year - Stiftelseverket</p>
         </footer>
     </div>
 
