--- a/Stipendium/Views/Account/Login.cshtml
+++ b/Stipendium/Views/Account/Login.cshtml
@@ -1,17 +1,24 @@
 ﻿@using Stipendium.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Logga in";
 }
 
-<h2>@ViewBag.Title.</h2>
+<style>
+    #RememberMe{
+        margin-left:0px;
+    }
+</style>
+
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-8">
+        <h2>@ViewBag.Title.</h2>
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
+                <h4>Logga in till dig kontot på Stiftelseverket.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -38,22 +45,16 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" value="Logga in" class="btn btn-default" />
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    @Html.ActionLink("Registrera som nya användare", "Register")
                 </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
+                        @Html.ActionLink("Glömt ditt lösenord?", "ForgotPassword")
+                    </p>
             }
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
     </div>
 </div>
