--- a/Stipendium/Views/Admin/UserAccounts.cshtml
+++ b/Stipendium/Views/Admin/UserAccounts.cshtml
@@ -5,6 +5,8 @@
 @{
     ViewBag.Title = "UserAccounts";
     var db = new ApplicationDbContext();
+    
+
 }
 
 <h2>UserAccounts</h2>
@@ -23,6 +25,7 @@
         <th>Role</th>
         <th>Registration Date</th>
         <th>Last Activity</th>
+        <th>E-mail Confirmed</th>
         <th></th>
     </tr>
 
@@ -31,76 +34,102 @@
         var lastActivityDifference = @DateTimeOffset.Now.Subtract(item.LastActivityDate);
         string role = item.Roles.Count > 0 ? db.Roles.Find(item.Roles.Single().RoleId).Name : "";
 
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserName)
-        </td>
-        <td>
-            @if (role != "")
-            {
-                @role
-            }
-            else
-            {
-                <span>Privatperson</span>
-            }
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RegistrationDate)
-        </td>
-        <td>
-            @if (lastActivityDifference.Days < 1)
-            {
-                if (lastActivityDifference.Hours > 0)
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+            <td>
+                @if (role != "")
                 {
-                    <span>@lastActivityDifference.Hours hours ago</span>
+                    @role
                 }
                 else
                 {
-                    <span>Less than an hour ago</span>
+                    <span>Privatperson</span>
                 }
-            }
-            else
-            {<span>@lastActivityDifference.Days days ago</span>}
-        </td>
-        <td>
-            <div class="dropdown show">
-                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
-                </a>
-
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    @if (role != null)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RegistrationDate)
+            </td>
+            <td>
+                @if (lastActivityDifference.Days < 1)
+                {
+                    if (lastActivityDifference.Hours > 0)
                     {
-                        if (role == "Företag")
-                        {
-                            <div class="dropdown-item"><span class="glyphicon glyphicon-pencil"></span><a href="@Url.Action("EditCompUser","Manage", new { id = item.Id})"> Edit</a></div>
-
-                        }
-                        else if (role == "Admin")
-                        {
-                            <div class="dropdown-item"><span class="glyphicon glyphicon-pencil"></span><a href="@Url.Action("EditAdmin","Admin", new { idNr = item.Id})"> Edit</a></div>
-                        }
-
-                        else
-                        {
-                            <div class="dropdown-item"><span class="glyphicon glyphicon-pencil"></span><a href="@Url.Action("EditPrivUser","Manage", new { id = item.Id})"> Edit</a></div>
-                        }
-
-                        <div class="dropdown-item"><span class="glyphicon glyphicon-trash"></span>@Html.ActionLink(" Delete", "Delete", new { id = item.Id })</div>
+                        <span>@lastActivityDifference.Hours hours ago</span>
                     }
+                    else
+                    {
+                        <span>Less than an hour ago</span>
+                    }
+                }
+                else
+                {<span>@lastActivityDifference.Days days ago</span>}
+            </td>
+            <td>
+                @if (item.EmailConfirmed)
+                {
+                    <span style="color: green">Confirmed</span>
+                }
+                else
+                {
+                    <span style="color:darkgoldenrod">Pending </span>
+                    <a href="#" onclick="Resend('@item.Id')" id="@item.Id">Resend?</a>
+                }
+            </td>
+            <td>
+                <div class="dropdown show">
+                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    </a>
+
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        @if (role != null)
+                        {
+                            if (role == "Företag")
+                            {
+                                <div class="dropdown-item"><span class="glyphicon glyphicon-pencil"></span><a href="@Url.Action("EditCompUser","Manage", new { id = item.Id})"> Edit</a></div>
+
+                            }
+                            else if (role == "Admin")
+                            {
+                                <div class="dropdown-item"><span class="glyphicon glyphicon-pencil"></span><a href="@Url.Action("EditAdmin","Admin", new { idNr = item.Id})"> Edit</a></div>
+                            }
+
+                            else
+                            {
+                                <div class="dropdown-item"><span class="glyphicon glyphicon-pencil"></span><a href="@Url.Action("EditPrivUser","Manage", new { id = item.Id})"> Edit</a></div>
+                            }
+
+                            <div class="dropdown-item"><span class="glyphicon glyphicon-trash"></span>@Html.ActionLink(" Delete", "Delete", new { id = item.Id })</div>
+                        }
+                    </div>
                 </div>
-            </div>
 
-        </td>
+            </td>
 
-    </tr>
+        </tr>
     }
 
 
 
 </table>
 
+<script src="~/Scripts/jquery-3.3.1.js"></script>
+<script>
+
+    function Resend(id) {
+        $.get("/Account/Resend?userid=" + id, function (Data) {
+            if (Data === "success") {
+                $("#" + id).replaceWith($('<span style="color:green">' + "Sent" + '</span>'));
+            }
+            else {
+                $("#" + id).replaceWith($('<span style="color:red">' + "Failed" + '</span>'));
+            }
+        });
+    }
+
+</script>
