--- a/Stipendium/Views/Home/Index.cshtml
+++ b/Stipendium/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 <div class="jumbotron">
-    <h1 class="display-4">Stipendium</h1>
+    <h1 class="display-4">Stiftelseverket</h1>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec imperdiet turpis. Mauris faucibus tellus at iaculis blandit.</p>
     <hr class="my-4">
 
@@ -14,9 +14,9 @@
             <div class="thumbnail">
                 <img src="https://st2.depositphotos.com/3053199/11797/v/950/depositphotos_117974246-stock-illustration-office-building-with-an-entrance.jpg" alt="...">
                 <div class="caption">
-                    <h3>Join today</h3>
-                    <p>Register at Stipendium to get full access to site's features</p>
-                    <p><a href="/Home/Registration" class="btn btn-primary" role="button">Join Now!</a>
+                    <h3>Ansluta</h3>
+                    <p>Registrera sig på Stipendium för att få full tillgång till webbplatsens funktioner</p>
+                    <p><a href="/Home/Registration" class="btn btn-primary" role="button">Registrera</a>
                 </div>
             </div>
         </div>
@@ -25,9 +25,9 @@
             <div class="thumbnail">
                 <img src="https://t4.ftcdn.net/jpg/01/67/62/79/500_F_167627921_guhNywzdWVWQkEu1M0UuVweUATPaHoOo.jpg" alt="...">
                 <div class="caption">
-                    <h3>Search</h3>
-                    <p>Search our database to find the company right for you</p>
-                    <p><a href="/Stiftelses/Index" class="btn btn-primary" role="button">Search</a>
+                    <h3>Söka</h3>
+                    <p>Bläddra i vår databas för att hitta stiftelsen rätt för dig</p>
+                    <p><a href="/Stiftelses/Index" class="btn btn-primary" role="button">Söka</a>
                 </div>
             </div>
         </div>
