--- a/Stipendium/Views/Home/Registration.cshtml
+++ b/Stipendium/Views/Home/Registration.cshtml
@@ -16,7 +16,7 @@
                 <dt>Medlemstyp:</dt>
                 <dd><input type="radio" name="medlemstyp" value="privat" /> Privatperson</dd>
                 <dd><input type="radio" name="medlemstyp" value="foretag" /> Företag</dd>
-                <dd> <button class="btn btn-default" href="#" id="next">Next <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span></button></dd>
+                <dd> <button class="btn btn-default" href="#" id="next">Nästa <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span></button></dd>
             </dl>
         </div>
     </div>
