Bug fixing in registration Added Stiftelse to Manage view if User is CompanyUser

--- a/Stipendium/Views/Account/RegisterCompany.cshtml
+++ b/Stipendium/Views/Account/RegisterCompany.cshtml
@@ -7,7 +7,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("RegisterComp", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("RegisterCompany", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Skapa nytt konto</h4>
