--- a/Stipendium/Views/Stiftelses/Details.cshtml
+++ b/Stipendium/Views/Stiftelses/Details.cshtml
@@ -31,7 +31,10 @@
 
 
 </div>
+@if(User.IsInRole("Admin"))
+{
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+}
