--- a/Stipendium/Views/Manage/Index.cshtml
+++ b/Stipendium/Views/Manage/Index.cshtml
@@ -1,21 +1,21 @@
 ﻿@model Stipendium.Models.IndexViewModel
-    @using System.IdentityModel;
+@using System.IdentityModel;
 @{
-    ViewBag.Title = "Manage";
+    ViewBag.Title = "Kontoinställningar";
 }
 
 <h2>@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
-    <h4>Change your account settings</h4>
+    <h4>Hantera din kontoinformation</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>Account</dt>
         <dd>
-            @if(User.IsInRole("Företag"))
+            @if (User.IsInRole("Företag"))
             {
-                @Html.ActionLink("Edit company information","EditCompUser")
+                @Html.ActionLink("Edit company information", "EditCompUser")
             }
             else
             {
@@ -35,65 +35,26 @@
             }
             ]
         </dd>
-        <dt>External Logins:</dt>
-        <dd>
-            @Model.Logins.Count [
-            @Html.ActionLink("Manage", "ManageLogins") ]
-        </dd>
-        @*
-            Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-             
-             See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-             
-             Uncomment the following block after you have set up two-factor authentication
-        *@
-        @*  
-            <dt>Phone Number:</dt>
-            <dd>
-                @(Model.PhoneNumber ?? "None")
-                @if (Model.PhoneNumber != null)
-                {
-                    <br />
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
-                    using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>[<input type="submit" value="Remove" class="btn-link" />]</text>
-                    }
-                }
-                else
-                {
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
-                }
-            </dd>
-        *@
-        <dt>Two-Factor Authentication:</dt>
-        <dd>
-            <p>
-                There are no two-factor authentication providers configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication.
-            </p>
-            @*@if (Model.TwoFactor)
-                {
-                    using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Enabled
-                        <input type="submit" value="Disable" class="btn btn-link" />
-                        </text>
-                    }
-                }
-                else
-                {
-                    using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>Disabled
-                        <input type="submit" value="Enable" class="btn btn-link" />
-                        </text>
-                    }
-                }*@
-        </dd>
     </dl>
+    <br />
+    
+    <h4>Din stiftelse</h4>
+    <hr />
+        @if (User.IsInRole("Företag"))
+        {
+            <div class="stiftelseContainer">
+                @{Html.RenderAction("DetailsPartial", "Stiftelses", new { id = ViewBag.StiftelseID });}
+            </div>
+        }
+
 </div>
+<style>
+    .stiftelseContainer {
+        width:80%;
+        margin:auto;
+        padding: 0px 20px;
+        background-color: aliceblue;
+        border: 1px solid gainsboro;
+    }
+
+</style>
