Deleted unused pages Translated pages to swedish

--- a/Stipendium/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Stipendium/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewBag.Title = "Återställning länk skickad";
 }
 
 <hgroup class="title">
@@ -7,7 +7,7 @@
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Kolla dit e-post att återställa ditt lösenord.
     </p>
 </div>
 	
