--- a/Stipendium/Content/Site.css
+++ b/Stipendium/Content/Site.css
@@ -26,4 +26,67 @@ textarea {
     max-width: 280px;
 }
 
+.glyphicon-refresh {
+    display: none;
+}
+
+.glyphicon-refresh-animate {
+    -animation: spin .7s infinite linear;
+    -webkit-animation: spin2 .7s infinite linear;
+}
+
+@-webkit-keyframes spin2 {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    from {
+        transform: scale(1) rotate(0deg);
+    }
+
+    to {
+        transform: scale(1) rotate(360deg);
+    }
+}
+
+.commentContainer{
+    max-width:500px;
+}
+.commenter-box{
+    margin-bottom:2px;
+}
+.comment-body{
+    margin-bottom:6px;
+}
+.commentlist-body {
+    min-height: 54px;
+    padding: 6px 12px;
+    background-color: aliceblue;
+    border: 1px solid gainsboro;
+    position: relative;
+    margin-bottom:14px;
+}
+.comment-date{
+    font-size:smaller;
+}
+
+.commentlist-body:before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 6px solid gainsboro;
+    border-right: 6px solid transparent;
+    border-top: 6px solid gainsboro;
+    border-bottom: 6px solid transparent;
+
+    left: 20px;
+    bottom: -13px;
+}
 
