CSS changes overall Changed texts

--- a/Stipendium/Views/Comments/Details.cshtml
+++ b/Stipendium/Views/Comments/Details.cshtml
@@ -26,6 +26,10 @@
         {
             <span class="comment-date text-muted">Edited on: @Model.EditDate</span>
         }
+        @if(User.IsInRole("Admin"))
+        {
+            @Html.ActionLink("Delete", "Delete", new {controller="Comments", id = Model.Id })
+        }
 
     </div>
 </div>
