--- a/Stipendium/Views/Home/Index.cshtml
+++ b/Stipendium/Views/Home/Index.cshtml
@@ -4,7 +4,15 @@
 
 <div class="jumbotron">
     <h1 class="display-4">Stiftelseverket</h1>
-    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec imperdiet turpis. Mauris faucibus tellus at iaculis blandit.</p>
+    <p class="lead">
+        Stiftelseverket.se är ett non-profit projekt där vi genom modern teknik vill hjälpa männsiskor
+        och organisationer att hitta fonder/stipendier för att kunna förverkliga något som annars inte
+        skulle ha blivit av.</p>
+
+    <p>
+        Vi kommer att uppmuntra både stiftelser, fonder och registrerade medlemmar att tillsammans
+        bidra med information, tips och trixs om hur man lättare hittar medel till sitt projekt.
+    </p>
     <hr class="my-4">
 
 
@@ -15,8 +23,10 @@
                 <img src="https://st2.depositphotos.com/3053199/11797/v/950/depositphotos_117974246-stock-illustration-office-building-with-an-entrance.jpg" alt="...">
                 <div class="caption">
                     <h3>Ansluta</h3>
-                    <p>Registrera sig på Stipendium för att få full tillgång till webbplatsens funktioner</p>
-                    <p><a href="/Home/Registration" class="btn btn-primary" role="button">Registrera</a>
+                    <p>
+                        Registrera dig för att få tillgång till mera information, helt gratis utan kostnad!
+                    </p>
+                    <p><a href="/Account/RegisterPrivate" class="btn btn-primary" role="button">Bli Medlem</a>
                 </div>
             </div>
         </div>
@@ -26,8 +36,8 @@
                 <img src="https://t4.ftcdn.net/jpg/01/67/62/79/500_F_167627921_guhNywzdWVWQkEu1M0UuVweUATPaHoOo.jpg" alt="...">
                 <div class="caption">
                     <h3>Söka</h3>
-                    <p>Bläddra i vår databas för att hitta stiftelsen rätt för dig</p>
-                    <p><a href="/Stiftelses/Index" class="btn btn-primary" role="button">Söka</a>
+                    <p>Sök bland över 5000 stiftelseroch fonder förhitta det du söker</p>
+                    <p><a href="/Stiftelses/Index" class="btn btn-primary" role="button">Starta</a>
                 </div>
             </div>
         </div>
