--- a/Stipendium/Content/Site.css
+++ b/Stipendium/Content/Site.css
@@ -5,11 +5,49 @@
 #loginLittle{
     display:none;
 }
-
+a{
+    color:green;
+}
+a:hover{
+    color:darkgreen;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+}
+
+.navbar-inverse {
+    background-color: forestgreen;
+    border-color: forestgreen;
+}
+    .navbar-inverse .navbar-brand {
+        color: white;
+    }
+
+.navbar-inverse .navbar-toggle {
+    border-color: forestgreen;
+}
+.navbar-toggle:hover {
+    background-color: forestgreen;
+}
+.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
+    background-color: darkgreen;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: ghostwhite;
+}
+
+.dropdown-divider {
+    border-top: 1px solid lawngreen;
+}
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+    border-color: darkgreen;
+}
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+    color: #fff;
+    background-color: darkgreen;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -90,3 +128,15 @@ textarea {
     bottom: -13px;
 }
 
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
+
+    background-color: forestgreen;
+    border-color: forestgreen;
+}
+
+btn btn-defaut{
+    forest-green;
+}
+.pagination > li > a, .pagination > li > span {
+    color:green;
+}
