--- a/Stipendium/Views/Shared/_LoginPartial.cshtml
+++ b/Stipendium/Views/Shared/_LoginPartial.cshtml
@@ -17,7 +17,7 @@
 
     #loginLittle {
         display: none;
-        border-top: #101010 1px solid;
+        border-top: darkgreen 1px solid;
     }
 
     @@media only screen and (max-width: 767px) {
