--- a/Stipendium/Views/Stiftelses/SearchResults.cshtml
+++ b/Stipendium/Views/Stiftelses/SearchResults.cshtml
@@ -32,7 +32,7 @@
 
     th {
         min-width: 150px;
-        color: #337ab7;
+        color: forestgreen;
     }
 
     .form-control {
@@ -86,7 +86,7 @@
 }), new { @class = "form-control" } )
         </div>
         <div class="form-group">
-            <input type="submit" value="Sök" class="btn btn-default" style="width:75px; background-color: #337ab7; color: white; border: none;" />
+            <input type="submit" value="Sök" class="btn btn-default" style="width:75px; background-color: forestgreen; color: white; border: none;" />
         </div>
     </div>
 
