--- a/Stipendium/Views/Home/Join.cshtml
+++ b/Stipendium/Views/Home/Join.cshtml
@@ -3,8 +3,7 @@
     ViewBag.Title = "Join";
 }
 
-<h2>Stipendium</h2>
-<h3>Join Stipendium now to get access to more detailed information</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce mi lacus, malesuada vel elit nec, tincidunt molestie lacus. Nullam quis malesuada urna. Nullam ornare quam nisl, non pulvinar elit dignissim in. Sed porttitor lectus ante, non elementum nisi faucibus eu. Etiam elementum lobortis massa quis vestibulum. Vivamus feugiat turpis sed commodo imperdiet. Phasellus condimentum, sem quis commodo faucibus, ex dui porttitor magna, vitae pharetra velit lacus non massa. Nunc condimentum enim leo, eu euismod dolor maximus eu. Nulla ac justo sit amet purus ultrices sollicitudin non nec dolor. Vivamus at scelerisque tortor. Nam sed ligula nec mauris tempus ultrices. Morbi et posuere libero, et pharetra ex. Quisque vel congue purus, sed dictum nibh. Phasellus sapien ex, malesuada nec porttitor sit amet, volutpat in urna. Nam iaculis justo non neque bibendum, ac viverra enim pulvinar.</p>
-
-<p>Register @Html.ActionLink("here","Registration", "Home")</p>
+<h3>Äger du en stiftelse?</h3>
+<p>Äger du en stiftelse ok ville du lägga det till i vårt register? </p>
+<p>Vi accepterar ansökningar om nya poster i vår databasen, fyll i formuläret nedan och en av våra representanter kontaktar dig för att verifiera informationen om din stiftelse. </p>
+<p>@Html.ActionLink("Starta här", "StiftelseApplication", "Account")</p>
