--- a/Stipendium/Views/Shared/_Layout.cshtml
+++ b/Stipendium/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Hem", "Index", "Home")</li>
                     <li>@Html.ActionLink("Stiftelser","Index","Stiftelses")</li>
+                    <li>@Html.ActionLink("Bli medlem","Join","Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
