--- a/Stipendium/Views/Account/RegisterPrivate.cshtml
+++ b/Stipendium/Views/Account/RegisterPrivate.cshtml
@@ -25,7 +25,7 @@
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
             <span class="form-text text-muted">
-                Lösenordet måste ha minst en siffer och en stor bokstav
+                Lösenordet måste ha minst en siffer och båda en stor och en liten   bokstav
             </span>
         </div>
     </div>
@@ -73,7 +73,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default" value="Registrera" />
         </div>
     </div>
 }
