--- a/Stipendium/Views/Home/Index.cshtml
+++ b/Stipendium/Views/Home/Index.cshtml
@@ -35,8 +35,8 @@
             <div class="thumbnail">
                 <img src="https://t4.ftcdn.net/jpg/01/67/62/79/500_F_167627921_guhNywzdWVWQkEu1M0UuVweUATPaHoOo.jpg" alt="...">
                 <div class="caption">
-                    <h3>Söka</h3>
-                    <p>Sök bland över 5000 stiftelseroch fonder förhitta det du söker</p>
+                    <h3>Register</h3>
+                    <p>Sök bland över 5000 olika fonder och stiftelser</p>
                     <p><a href="/Stiftelses/Index" class="btn btn-primary" role="button">Starta</a>
                 </div>
             </div>
