--- a/Stipendium/Views/Manage/EditPrivUser.cshtml
+++ b/Stipendium/Views/Manage/EditPrivUser.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "EditPrivUser";
 }
 
-<h2>EditPrivUser</h2>
+<h2>Kontoinformation</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>PrivateUser</h4>
+        <h4>Hantera din kontoinformation</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
