--- a/Stipendium/Views/Account/ConfirmEmail.cshtml
+++ b/Stipendium/Views/Account/ConfirmEmail.cshtml
@@ -5,6 +5,6 @@
 <h2>@ViewBag.Title.</h2>
 <div>
     <p>
-        Tack för att du bekräftar ditt mail. Gärna @Html.ActionLink("klicka här at logga in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Tack för att du bekräftade din e-postadress, @Html.ActionLink("klicka här at logga in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
