--- a/Stipendium/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Stipendium/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Återställning länk skickad";
+    ViewBag.Title = "Återställningslänk skickad";
 }
 
 <hgroup class="title">
@@ -7,7 +7,7 @@
 </hgroup>
 <div>
     <p>
-        Kolla dit e-post att återställa ditt lösenord.
+        Kontrollera din e-postadress för att återställa ditt lösenord
     </p>
 </div>
 	
