--- a/Stipendium/Views/Home/Join.cshtml
+++ b/Stipendium/Views/Home/Join.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Join";
 }
 
-<h3>Äger du en stiftelse?</h3>
-<p>Äger du en stiftelse ok ville du lägga det till i vårt register? </p>
+<h3>Saknar du din stiftelse?</h3>
+
 <p>Vi accepterar ansökningar om nya poster i vår databasen, fyll i formuläret nedan och en av våra representanter kontaktar dig för att verifiera informationen om din stiftelse. </p>
 <p>@Html.ActionLink("Starta här", "StiftelseApplication", "Account")</p>
