--- a/Stipendium/Views/Account/ForgotPassword.cshtml
+++ b/Stipendium/Views/Account/ForgotPassword.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Skapa in din e-post.</h4>
+<h4>Ange din e-postadress för att återställa lösenord.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Skicka Länk" />
+            <input type="submit" class="btn btn-default" value="Skicka återställningsänk" />
         </div>
     </div>
 }
